fix: fix alignment issue in showcase section

--- a/public/main.css
+++ b/public/main.css
@@ -723,6 +723,10 @@ html {
   flex-wrap: wrap;
 }
 
+.items-start {
+  align-items: flex-start;
+}
+
 .items-center {
   align-items: center;
 }
@@ -1058,6 +1062,10 @@ html {
 
   .md\:items-start {
     align-items: flex-start;
+  }
+
+  .md\:items-center {
+    align-items: center;
   }
 
   .md\:text-left {
